--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
+authors = ["Richard Cook"]
+description = "Git URL parser"
+homepage = "https://github.com/rcook/joatmon-rs/"
+license = "MIT"
 name = "git-url"
-version = "0.1.0"
-authors = ["Richard Cook <rcook@rcook.org>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version = "0.0.0"
+edition = "2021"
 
 [dependencies]
